--- a/SecureFileStorage.web/Pages/Login.razor
+++ b/SecureFileStorage.web/Pages/Login.razor
@@ -1,8 +1,13 @@
 @page "/login"
 @using System.Net.Http.Json
+@using SecureFileStorage.Core.Interfaces
+@using SecureFileStorage.Web.Services
+@using SecureFileStorage.Infrastructure.Enums
 @inject HttpClient Http
 @inject NavigationManager Navigation
 @inject IJSRuntime JSRuntime
+@inject IActivityLogService ActivityLogService
+@inject ITokenService TokenService
 
 <div class="container">
     <div class="row justify-content-center">
@@ -83,6 +88,9 @@
             await JSRuntime.InvokeVoidAsync("localStorage.setItem", "authToken", responseData.Token);
             isAuthenticated = true;
             loginModel = new LoginModel();
+            var loggedUserId = await TokenService.GetLoggedInUserIdAsync();
+            await ActivityLogService.LogActivity(loggedUserId, 1, ActivityLogEnum.Login); // activity log
+
             Navigation.NavigateTo("/");  
         } else {
             message = "Prijava nije uspela. " + await response.Content.ReadAsStringAsync();
