--- a/SecureFileStorage.web/Shared/NavMenu.razor
+++ b/SecureFileStorage.web/Shared/NavMenu.razor
@@ -1,8 +1,11 @@
 ﻿@using SecureFileStorage.Web.Services
+@using SecureFileStorage.Core.Interfaces
+@using SecureFileStorage.Infrastructure.Enums
 
 @inject IJSRuntime JSRuntime
 @inject NavigationManager NavigationManager
 @inject ITokenService TokenService
+@inject IActivityLogService ActivityLogService
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
@@ -101,8 +104,11 @@
         }
     }
 
-    private void Logout()
+    private async void Logout()
     {
+        var loggedUserId = await TokenService.GetLoggedInUserIdAsync();
+        await ActivityLogService.LogActivity(loggedUserId, 1, ActivityLogEnum.Logout); // activity log
+
         JSRuntime.InvokeVoidAsync("localStorage.removeItem", "authToken");
         isAuthenticated = false;
         NavigationManager.NavigateTo("login");
